<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.SplashScreen">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">


        <ImageView
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:id="@+id/imgLogo1"
            android:scaleType="fitXY"
            android:src="@drawable/logoa2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/linearLayout"
            android:layout_marginTop="230dp"
            android:background="@drawable/eclipse_background_brow"
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:fontFamily="@font/bellerose"
                android:layout_marginTop="50dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:text="@string/dangnhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_marginBottom="150dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:fontFamily="@font/bellerose"
                    android:textColor="@color/colorWhite"
                    android:drawablePadding="12dp"
                    android:hint="@string/tendangnhap"
                    android:id="@+id/edtUsername"
                    android:textColorHint="#94FFFFFF"
                    android:paddingLeft="10dp"
                    android:drawableLeft="@drawable/usernamee"
                    android:background="@drawable/custom_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <EditText
                    android:fontFamily="@font/bellerose"
                    android:id="@+id/edtPassword"
                    android:textColor="@color/colorWhite"
                    android:inputType="textPassword"
                    android:drawablePadding="10dp"
                    android:textColorHint="#94FFFFFF"
                    android:hint="@string/matkhau"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    android:drawableLeft="@drawable/password"
                    android:background="@drawable/custom_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <RelativeLayout
                    android:id="@+id/btnLogin"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <Button
                        android:id="@+id/btnLogina"
                        android:fontFamily="@font/bellerose"
                        android:background="@null"
                        android:textColor="@color/colorPrimary"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/dangnhap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:layout_marginLeft="7dp"
                        android:layout_toRightOf="@id/btnLogina"
                        android:layout_centerVertical="true"
                        android:src="@drawable/arrow_right_brow"
                        android:layout_width="20dp"
                        android:layout_height="20dp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_custom_background_default"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <Button
                        android:fontFamily="@font/bellerose"
                        android:background="@null"
                        android:id="@+id/btnLoginFaceID"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/dangnhapfaceid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:layout_toRightOf="@id/btnLoginFaceID"
                        android:layout_centerVertical="true"
                        android:src="@drawable/iconfinder_face"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:fontFamily="@font/bellerose"
            android:visibility="gone"
            android:id="@+id/txtHotline"
            android:layout_marginBottom="3dp"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:text="Hotline: 19008198"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


        <ImageView
            android:layout_gravity="center_horizontal|center_vertical"
            android:id="@+id/imgLogo2"
            android:layout_marginBottom="50dp"
            android:src="@drawable/logoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <LinearLayout
       android:id="@+id/layoutLoading"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ProgressBar
            android:indeterminateTint="@color/colorNavigation"
            android:id="@+id/processBar"
            android:layout_width="35dp"
            android:layout_height="35dp"/>
        <TextView
            android:fontFamily="@font/bellerose"
            android:textSize="13sp"
            android:id="@+id/txtLoadingApp"
            android:layout_gravity="center"
            android:textColor="@color/colorNavigation"
            android:text="Loading..."
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:fontFamily="@font/bellerose"
        android:textSize="13sp"
        android:textColor="@color/colorNavigation"
        android:id="@+id/txt_user_splashscreen"
        android:layout_marginBottom="10dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</FrameLayout>